<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tosshin_gazebo_plugins</name>
  <version>0.2.0</version>
  <description>Gazebo plugins implementation of Tosshin mobile robot navigation project</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>keisan</depend>
  <depend>rclcpp</depend>
  <depend>tosshin_cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/plugins" />
  </export>
</package>
