<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dienen_gazebo_plugins</name>
  <version>0.3.0</version>
  <description>Gazebo plugins for Dienen assistive robot simulation</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/plugins" />
  </export>
</package>
